fix overflow of title and cover on medie with medium width

--- a/styles/index.less
+++ b/styles/index.less
@@ -629,6 +629,10 @@ li.series {
 		margin-left: 0;
 	}
 
+	.obj_monograph_summary .cover {
+		float:none;
+	}
+
 	.seriesName {
 		padding-top: 1vh;
 	}
